feat: add swagger foc for list and response  methosd
